--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -42,10 +42,10 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto p-4 p-lg-0">
-            <a href="/index.html" class="nav-item nav-link active">Accueil</a>
+            <a href="/index.html" class="nav-item nav-link">Accueil</a>
             <a href="/tarifs.html" class="nav-item nav-link">Nos Tarifs</a>
             <a href="/projets.html" class="nav-item nav-link">Nos Projets</a>
-            <a href="/articles/" class="nav-item nav-link">Nos Articles</a>
+            <a href="/articles/" class="nav-item nav-link active">Nos Articles</a>
         </div>
     </div>
 </nav>
@@ -72,11 +72,12 @@
                         <div class="blog-item">
                             <div class="overflow-hidden">
                                 <!-- Image du post -->
-                                {% assign post_title = post.title | slugify %}
-
-                                <img class="img-fluid w-100"
-                                     src="/img/posts/{{ post_title }}.jpg"
-                                     alt="{{ post.title }}">
+                                {% if post.image  %}
+                                    <img class="img-fluid w-100"
+                                         src="{{ post.image }}"
+                                         alt="{{ post.title }}"
+                                    >
+                                {% endif %}
                                 </div>
                             <div class="bg-light p-4">
                                 <div class="breadcrumb blog-meta">
