--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,6 +23,29 @@
 {% include contact.html %}
 
 {% include scripts.html %}
+
+<script>
+    window.ChatWidgetConfig = {
+        webhook: {
+            url: 'https://camsdevelopment.app.n8n.cloud/webhook/f406671e-c954-4691-b39a-66c90aa2f103/chat',
+            route: 'general'
+        },
+        branding: {
+            name: 'guiziweb', // Your company name
+            welcomeText: 'Bonjour 👋, Comment pouvons-nous vous aider?', 
+            responseTimeText: 'Nous répondons généralement immédiatement'
+        },
+        style: {
+            primaryColor: '#854fff', //Primary color
+            secondaryColor: '#6b3fd4', //Secondary color
+            position: 'right', //Position of the widget (left or right)
+            backgroundColor: '#ffffff', //Background color of the chat widget
+            fontColor: '#333333' //Text color for messages and interface
+        }
+    };
+</script>
+<script src="https://cdn.jsdelivr.net/gh/WayneSimpson/n8n-chatbot-template@ba944c3/chat-widget.js"></script>
+    
 </body>
 
 </html>
