--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,27 +24,19 @@
 
 {% include scripts.html %}
 
-<script>
-    window.ChatWidgetConfig = {
-        webhook: {
-            url: 'https://camsdevelopment.app.n8n.cloud/webhook/f406671e-c954-4691-b39a-66c90aa2f103/chat',
-            route: 'general'
-        },
-        branding: {
-            name: 'guiziweb', // Your company name
-            welcomeText: 'Bonjour 👋, Comment pouvons-nous vous aider?', 
-            responseTimeText: 'Nous répondons généralement immédiatement'
-        },
-        style: {
-            primaryColor: '#854fff', //Primary color
-            secondaryColor: '#6b3fd4', //Secondary color
-            position: 'right', //Position of the widget (left or right)
-            backgroundColor: '#ffffff', //Background color of the chat widget
-            fontColor: '#333333' //Text color for messages and interface
-        }
-    };
+<!--Start of Tawk.to Script-->
+<script type="text/javascript">
+    var Tawk_API=Tawk_API||{}, Tawk_LoadStart=new Date();
+    (function(){
+    var s1=document.createElement("script"),s0=document.getElementsByTagName("script")[0];
+    s1.async=true;
+    s1.src='https://embed.tawk.to/67d1d60df0010819121bf7bd/1im5qo9nf';
+    s1.charset='UTF-8';
+    s1.setAttribute('crossorigin','*');
+    s0.parentNode.insertBefore(s1,s0);
+    })();
 </script>
-<script src="https://cdn.jsdelivr.net/gh/WayneSimpson/n8n-chatbot-template@ba944c3/chat-widget.js"></script>
+    <!--End of Tawk.to Script-->
     
 </body>
 
